terraform/main.tf
data "aws_vpc" "default" {
  default = true
}

resource "aws_instance" "web" {
  ami                    = var.ubuntu_24_04_ami
  instance_type          = "t3.small"
  key_name               = aws_key_pair.default.key_name
  vpc_security_group_ids = [aws_security_group.web_sg.id]
}

resource "aws_instance" "db" {
  ami                    = var.ubuntu_24_04_ami
  instance_type          = "t3.micro"
  key_name               = aws_key_pair.default.key_name
  vpc_security_group_ids = [aws_security_group.db_sg.id]
}

resource "aws_key_pair" "default" {
  key_name   = "test-task-key"
  public_key = file("~/.ssh/id_ed25519.pub")
}

resource "aws_security_group" "web_sg" {
  name        = "web-sg"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.my_ip}/32"]
  }

  ingress {
    description = "App HTTP"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "db_sg" {
  name        = "db-sg"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.my_ip}/32"]
  }

  ingress {
    description = "MySQL from Web"
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    security_groups = [aws_security_group.web_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
